--- a/css/main.css
+++ b/css/main.css
@@ -73,19 +73,19 @@ section {
 
 .btn {
     cursor: pointer;
-    border: none;
+    border: 0;
     padding: 6px 12px;
     border-radius: 3px;
     line-height: 1.4;
 }
 
-button.btn-default  {
-    color: white;
+.btn-default  {
+    color: #ffffff;
     background-color: #faa541;
 }
 
-button.btn-primary { 
-    color: white;
+.btn-primary { 
+    color: #ffffff;
     background-color: #364147;
 }
 
@@ -108,6 +108,6 @@ button.btn-primary {
 }
 
 .text-primary {
-    font-size: 10px;
+    font-size: 16px;
     color: #364147;
 }
