--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ section {
 }
 
 .brand {
-    height: 80px;
+    height: 85px;
     width: 170px;
     margin-left: -15px;
     margin-right: 60px;
@@ -138,8 +138,8 @@ section {
 }
 
 .search-button {
-    background: #a0a0a0;
-    color: #fff;
+    background-color: #a0a0a0;
+    color: #ffffff;
     width: 100px;
     height: 30px;
     border: 0;
