--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,8 @@ section {
 
 /* Hero */
 .hero {
-    background-image: url('../img/hero.jpg') no-repeat center 400px/cover;
+    background-image: url('../img/hero.jpg') no-repeat center center/cover;
+    background-size: center 400px;
     text-transform: uppercase;
 }
 
@@ -201,7 +202,7 @@ section {
     color: #faa541;
 }
 
-.hero div h1, .hero div h2 {
+.hero h1, .hero h2 {
     font-size: 63px;
     font-weight: 700;
     line-height: 0.9;
