--- a/css/main.css
+++ b/css/main.css
@@ -317,7 +317,7 @@ section {
 }
 
 .full-banner-sidebar h4:after {
-    content: '';
+    content: "";
     width: 100px;
     height: 1px;
     background-color: #faa541;
